--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,20 @@
-# Angular specific
-/dist/
-/out-tsc/
-/tmp/
-/coverage/
-/e2e/test-output/
-/.angular/
-.angular/
+# Compiled output
+/dist
+/out-tsc
+/tmp
 
-# Node modules and dependency files
-/node_modules/
-/package-lock.json
-/yarn.lock
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+package-lock.json
 
-# Environment files
-/.env
+# Editor
+.DS_Store
+.idea
+Thumbs.db
+*.swp
+*.swo
 
-# Angular CLI and build artefacts
-/.angular-cli.json
-/.ng/
-
-# TypeScript cache
-*.tsbuildinfo
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Environment
+.env
