--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sbarco-di-enea": {
+    "ristorante-monumento": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/sbarco-di-enea",
+            "outputPath": "dist/ristorante-monumento",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -57,10 +57,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "sbarco-di-enea:build:production"
+              "buildTarget": "ristorante-monumento:build:production"
             },
             "development": {
-              "buildTarget": "sbarco-di-enea:build:development"
+              "buildTarget": "ristorante-monumento:build:development"
             }
           },
           "defaultConfiguration": "development"
